--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <figcaption>Traditional veggie burger on a whole grain bun topped with sprouts.</figcaption>
       </figure>
     </div>
-    <div class="burger unit xs-0 s-0 m-0 l-1-3">
+    <div class="burger unit unit-xs-hidden unit-s-hidden unit-m-hidden l-1-3">
       <figure>
         <img class="img-flex" src="images/veggie-burger-3.jpg" alt="">
         <figcaption>Black bean burger with onion & lettuce, surrounded by an oat bun.</figcaption>
